# sdltest

./: .gitignore  .gitmodules  CMakeLists.txt  CMakeSettings.json  README  TODO  config.h.in  gameplan.md  gladsettings.txt  math.txt
engine/: CMakeLists.txt
engine/include/engine/: input.hpp  window.hpp
engine/include/engine/debug/: timer.hpp
engine/include/engine/ecs/: component.hpp  object.hpp  sceneroot.hpp
engine/include/engine/ecs/components/: camera.hpp  renderer.hpp  transform.hpp
engine/include/engine/inputs/: mouse.hpp
engine/include/engine/rendering/: material.hpp  mesh.hpp  shader.hpp
engine/include/engine/resource/: material.hpp  resource.hpp  resource_manager.hpp  shader.hpp
engine/src/: input.cpp  window.cpp
engine/src/ecs/: component.cpp  object.cpp  sceneroot.cpp
engine/src/ecs/components/: camera.cpp  renderer.cpp  transform.cpp
engine/src/rendering/: material.cpp  mesh.cpp  shader.cpp
engine/src/resource/: material.cpp  resource.cpp  resource_manager.cpp  shader.cpp
include/: component.hpp  component_list.hpp  input.hpp  object.hpp  renderer.hpp  scene.hpp  window.hpp
include/components/: camera.hpp  renderer.hpp  transform.hpp
include/util/: noncopyable.hpp
include/window/: window.hpp
res/: basic.frag  basic.vert  cube.mesh  floor.mesh  font.vert
res/shaders/: basic.frag  basic.vert  texture.frag  texture.vert
shaders/: basic.frag
src/: component.cpp  component.hpp  custom_component.cpp  custom_component.hpp  game.cpp  input.cpp  input.hpp  main.cpp  object.cpp  object.hpp  resource.cpp  resource.hpp  resource_manager.cpp  resource_manager.hpp  scene.cpp  sceneroot.cpp  sceneroot.hpp  window.cpp  window.hpp
src/components/: camera.cpp  camera.hpp  custom.hpp  renderer.cpp  renderer.hpp  transform.cpp  transform.hpp  ui.cpp  ui.hpp
src/ecs/: component.cpp  component.hpp  object.cpp  object.hpp  sceneroot.cpp  sceneroot.hpp
src/ecs/components/: camera.cpp  camera.hpp  renderer.cpp  renderer.hpp  transform.cpp  transform.hpp
src/game/: camera_controller.cpp  camera_controller.hpp  game.cpp  meshgen.cpp  meshgen.hpp  terrain.cpp  terrain.hpp
src/inputs/: keyboard.hpp
src/rendering/: mesh.cpp  mesh.hpp
src/resources/: font.cpp  font.hpp  mesh.cpp  mesh.hpp  shader.cpp  shader.hpp  texture.cpp  texture.hpp
src/window/: window.cpp
